packages/agent_dart/macos/Classes/frb.h

typedef struct _Dart_Handle* Dart_Handle;
#define NOT 0
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_PhraseToSeedReq {
  struct wire_uint_8_list *phrase;
  struct wire_uint_8_list *password;
} wire_PhraseToSeedReq;
typedef struct wire_SeedToKeyReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *path;
} wire_SeedToKeyReq;
typedef struct wire_BLSVerifyReq {
  struct wire_uint_8_list *signature;
  struct wire_uint_8_list *message;
  struct wire_uint_8_list *public_key;
} wire_BLSVerifyReq;
typedef struct wire_ED25519FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_ED25519FromSeedReq;
typedef struct wire_ED25519SignReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *message;
} wire_ED25519SignReq;
typedef struct wire_ED25519VerifyReq {
  struct wire_uint_8_list *sig;
  struct wire_uint_8_list *message;
  struct wire_uint_8_list *pub_key;
} wire_ED25519VerifyReq;
typedef struct wire_Secp256k1FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_Secp256k1FromSeedReq;
typedef struct wire_Secp256k1SignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
} wire_Secp256k1SignWithSeedReq;
typedef struct wire_Secp256k1VerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_Secp256k1VerifyReq;
typedef struct wire_Secp256k1ShareSecretReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *public_key_raw_bytes;
} wire_Secp256k1ShareSecretReq;
typedef struct wire_Secp256k1RecoverReq {
  struct wire_uint_8_list *message_pre_hashed;
  struct wire_uint_8_list *signature_bytes;
  uint8_t *chain_id;
} wire_Secp256k1RecoverReq;
typedef struct wire_P256FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_P256FromSeedReq;
typedef struct wire_ScriptDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t n;
  uint32_t p;
  uint32_t r;
} wire_ScriptDeriveReq;
typedef struct wire_PsbtWalletReq {
  struct wire_uint_8_list *prv;
  struct wire_uint_8_list *address_type;
  struct wire_uint_8_list *network;
} wire_PsbtWalletReq;
typedef struct wire_list_script_amount {
  struct wire_ScriptAmount *ptr;
  int32_t len;
} wire_list_script_amount;
typedef struct wire_list_out_point {
  struct wire_OutPoint *ptr;
  int32_t len;
} wire_list_out_point;
typedef struct wire_TxBulderReq {
  struct wire_PsbtWalletReq wallet_req;
  struct wire_list_script_amount *recipients;
  struct wire_list_out_point *utxos;
  struct wire_list_out_point *unspendable;
  bool manually_selected_only;
  bool only_spend_change;
  bool do_not_spend_change;
  float *fee_rate;
  uint64_t *fee_absolute;
  bool drain_wallet;
  struct wire_uint_8_list *drain_to;
  bool enable_rbf;
  uint32_t *n_sequence;
  struct wire_uint_8_list *data;
} wire_TxBulderReq;
void store_dart_post_cobject(DartPostCObjectFnType ptr);
Dart_Handle get_dart_object(uintptr_t ptr);
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
void wire_mnemonic_phrase_to_seed(int64_t port_, struct wire_PhraseToSeedReq *req);
void wire_mnemonic_seed_to_key(int64_t port_, struct wire_SeedToKeyReq *req);
void wire_bls_init(int64_t port_);
void wire_bls_verify(int64_t port_, struct wire_BLSVerifyReq *req);
void wire_ed25519_from_seed(int64_t port_, struct wire_ED25519FromSeedReq *req);
void wire_ed25519_sign(int64_t port_, struct wire_ED25519SignReq *req);
void wire_ed25519_verify(int64_t port_, struct wire_ED25519VerifyReq *req);
void wire_secp256k1_from_seed(int64_t port_, struct wire_Secp256k1FromSeedReq *req);
void wire_secp256k1_sign(int64_t port_, struct wire_Secp256k1SignWithSeedReq *req);
void wire_secp256k1_sign_recoverable(int64_t port_, struct wire_Secp256k1SignWithSeedReq *req);
void wire_secp256k1_verify(int64_t port_, struct wire_Secp256k1VerifyReq *req);
void wire_secp256k1_get_shared_secret(int64_t port_, struct wire_Secp256k1ShareSecretReq *req);
void wire_secp256k1_recover(int64_t port_, struct wire_Secp256k1RecoverReq *req);
void wire_p256_from_seed(int64_t port_, struct wire_P256FromSeedReq *req);