packages/agent_dart_ffi/lib/src/bridge_generated.io.dart


  void _api_fill_to_wire_script_derive_req(ScriptDeriveReq apiObj, wire_ScriptDeriveReq wireObj) {
    wireObj.password = api2wire_uint_8_list(apiObj.password);
    wireObj.salt = api2wire_uint_8_list(apiObj.salt);
    wireObj.n = api2wire_u32(apiObj.n);
    wireObj.p = api2wire_u32(apiObj.p);
    wireObj.r = api2wire_u32(apiObj.r);
  }

  void _api_fill_to_wire_secp_256_k_1_from_seed_req(Secp256k1FromSeedReq apiObj, wire_Secp256k1FromSeedReq wireObj) {
    wireObj.seed = api2wire_uint_8_list(apiObj.seed);
  }

  void _api_fill_to_wire_secp_256_k_1_recover_req(Secp256k1RecoverReq apiObj, wire_Secp256k1RecoverReq wireObj) {
    wireObj.message_pre_hashed = api2wire_uint_8_list(apiObj.messagePreHashed);
    wireObj.signature_bytes = api2wire_uint_8_list(apiObj.signatureBytes);
    wireObj.chain_id = api2wire_opt_box_autoadd_u8(apiObj.chainId);
  }

  void _api_fill_to_wire_secp_256_k_1_share_secret_req(Secp256k1ShareSecretReq apiObj, wire_Secp256k1ShareSecretReq wireObj) {
    wireObj.seed = api2wire_uint_8_list(apiObj.seed);
    wireObj.public_key_raw_bytes = api2wire_uint_8_list(apiObj.publicKeyRawBytes);
  }

  void _api_fill_to_wire_secp_256_k_1_sign_with_seed_req(Secp256k1SignWithSeedReq apiObj, wire_Secp256k1SignWithSeedReq wireObj) {
    wireObj.msg = api2wire_uint_8_list(apiObj.msg);
    wireObj.seed = api2wire_uint_8_list(apiObj.seed);
  }

  void _api_fill_to_wire_secp_256_k_1_verify_req(Secp256k1VerifyReq apiObj, wire_Secp256k1VerifyReq wireObj) {
    wireObj.message_hash = api2wire_uint_8_list(apiObj.messageHash);
    wireObj.signature_bytes = api2wire_uint_8_list(apiObj.signatureBytes);
    wireObj.public_key_bytes = api2wire_uint_8_list(apiObj.publicKeyBytes);
  }

  void _api_fill_to_wire_seed_to_key_req(SeedToKeyReq apiObj, wire_SeedToKeyReq wireObj) {
    wireObj.seed = api2wire_uint_8_list(apiObj.seed);
    wireObj.path = api2wire_String(apiObj.path);
  }

  void _api_fill_to_wire_tx_bulder_req(TxBulderReq apiObj, wire_TxBulderReq wireObj) {
    _api_fill_to_wire_psbt_wallet_req(apiObj.walletReq, wireObj.wallet_req);
    wireObj.recipients = api2wire_list_script_amount(apiObj.recipients);
    wireObj.utxos = api2wire_list_out_point(apiObj.utxos);
    wireObj.unspendable = api2wire_list_out_point(apiObj.unspendable);
    wireObj.manually_selected_only = api2wire_bool(apiObj.manuallySelectedOnly);
    wireObj.only_spend_change = api2wire_bool(apiObj.onlySpendChange);
    wireObj.do_not_spend_change = api2wire_bool(apiObj.doNotSpendChange);
    wireObj.fee_rate = api2wire_opt_box_autoadd_f32(apiObj.feeRate);
    wireObj.fee_absolute = api2wire_opt_box_autoadd_u64(apiObj.feeAbsolute);
    wireObj.drain_wallet = api2wire_bool(apiObj.drainWallet);
    wireObj.drain_to = api2wire_opt_String(apiObj.drainTo);
    wireObj.enable_rbf = api2wire_bool(apiObj.enableRbf);
    wireObj.n_sequence = api2wire_opt_box_autoadd_u32(apiObj.nSequence);
    wireObj.data = api2wire_uint_8_list(apiObj.data);
  }
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class AgentDartWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AgentDartWire(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AgentDartWire.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup) : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr = _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>('store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr.asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr = _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>('get_dart_object');
  late final _get_dart_object = _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>('drop_dart_object');
  late final _drop_dart_object = _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr = _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>('new_dart_opaque');
  late final _new_dart_opaque = _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr = _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>('init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_mnemonic_phrase_to_seed(
    int port_,
    ffi.Pointer<wire_PhraseToSeedReq> req,
  ) {
    return _wire_mnemonic_phrase_to_seed(
      port_,
      req,
    );
  }

  late final _wire_mnemonic_phrase_to_seedPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PhraseToSeedReq>)>>('wire_mnemonic_phrase_to_seed');
  late final _wire_mnemonic_phrase_to_seed = _wire_mnemonic_phrase_to_seedPtr.asFunction<void Function(int, ffi.Pointer<wire_PhraseToSeedReq>)>();

  void wire_mnemonic_seed_to_key(
    int port_,
    ffi.Pointer<wire_SeedToKeyReq> req,
  ) {
    return _wire_mnemonic_seed_to_key(
      port_,
      req,
    );
  }

  late final _wire_mnemonic_seed_to_keyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SeedToKeyReq>)>>('wire_mnemonic_seed_to_key');
  late final _wire_mnemonic_seed_to_key = _wire_mnemonic_seed_to_keyPtr.asFunction<void Function(int, ffi.Pointer<wire_SeedToKeyReq>)>();

  void wire_bls_init(
    int port_,
  ) {
    return _wire_bls_init(
      port_,
    );
  }

  late final _wire_bls_initPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('wire_bls_init');
  late final _wire_bls_init = _wire_bls_initPtr.asFunction<void Function(int)>();

  void wire_bls_verify(
    int port_,
    ffi.Pointer<wire_BLSVerifyReq> req,
  ) {
    return _wire_bls_verify(
      port_,
      req,
    );
  }

  late final _wire_bls_verifyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_BLSVerifyReq>)>>('wire_bls_verify');
  late final _wire_bls_verify = _wire_bls_verifyPtr.asFunction<void Function(int, ffi.Pointer<wire_BLSVerifyReq>)>();

  void wire_ed25519_from_seed(
    int port_,
    ffi.Pointer<wire_ED25519FromSeedReq> req,
  ) {
    return _wire_ed25519_from_seed(
      port_,
      req,
    );
  }

  late final _wire_ed25519_from_seedPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_ED25519FromSeedReq>)>>('wire_ed25519_from_seed');
  late final _wire_ed25519_from_seed = _wire_ed25519_from_seedPtr.asFunction<void Function(int, ffi.Pointer<wire_ED25519FromSeedReq>)>();

  void wire_ed25519_sign(
    int port_,
    ffi.Pointer<wire_ED25519SignReq> req,
  ) {
    return _wire_ed25519_sign(
      port_,
      req,
    );
  }

  late final _wire_ed25519_signPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_ED25519SignReq>)>>('wire_ed25519_sign');
  late final _wire_ed25519_sign = _wire_ed25519_signPtr.asFunction<void Function(int, ffi.Pointer<wire_ED25519SignReq>)>();

  void wire_ed25519_verify(
    int port_,
    ffi.Pointer<wire_ED25519VerifyReq> req,
  ) {
    return _wire_ed25519_verify(
      port_,
      req,
    );
  }

  late final _wire_ed25519_verifyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_ED25519VerifyReq>)>>('wire_ed25519_verify');
  late final _wire_ed25519_verify = _wire_ed25519_verifyPtr.asFunction<void Function(int, ffi.Pointer<wire_ED25519VerifyReq>)>();

  void wire_secp256k1_from_seed(
    int port_,
    ffi.Pointer<wire_Secp256k1FromSeedReq> req,
  ) {
    return _wire_secp256k1_from_seed(
      port_,
      req,
    );
  }

  late final _wire_secp256k1_from_seedPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Secp256k1FromSeedReq>)>>('wire_secp256k1_from_seed');
  late final _wire_secp256k1_from_seed = _wire_secp256k1_from_seedPtr.asFunction<void Function(int, ffi.Pointer<wire_Secp256k1FromSeedReq>)>();

  void wire_secp256k1_sign(
    int port_,
    ffi.Pointer<wire_Secp256k1SignWithSeedReq> req,
  ) {
    return _wire_secp256k1_sign(
      port_,
      req,
    );
  }

  late final _wire_secp256k1_signPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Secp256k1SignWithSeedReq>)>>('wire_secp256k1_sign');
  late final _wire_secp256k1_sign = _wire_secp256k1_signPtr.asFunction<void Function(int, ffi.Pointer<wire_Secp256k1SignWithSeedReq>)>();

  void wire_secp256k1_sign_recoverable(
    int port_,
    ffi.Pointer<wire_Secp256k1SignWithSeedReq> req,
  ) {
    return _wire_secp256k1_sign_recoverable(
      port_,
      req,
    );
  }

  late final _wire_secp256k1_sign_recoverablePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Secp256k1SignWithSeedReq>)>>('wire_secp256k1_sign_recoverable');
  late final _wire_secp256k1_sign_recoverable = _wire_secp256k1_sign_recoverablePtr.asFunction<void Function(int, ffi.Pointer<wire_Secp256k1SignWithSeedReq>)>();

  void wire_secp256k1_verify(
    int port_,
    ffi.Pointer<wire_Secp256k1VerifyReq> req,
  ) {
    return _wire_secp256k1_verify(
      port_,
      req,
    );
  }

  late final _wire_secp256k1_verifyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Secp256k1VerifyReq>)>>('wire_secp256k1_verify');
  late final _wire_secp256k1_verify = _wire_secp256k1_verifyPtr.asFunction<void Function(int, ffi.Pointer<wire_Secp256k1VerifyReq>)>();

  void wire_secp256k1_get_shared_secret(
    int port_,
    ffi.Pointer<wire_Secp256k1ShareSecretReq> req,
  ) {
    return _wire_secp256k1_get_shared_secret(
      port_,
      req,
    );
  }

  late final _wire_secp256k1_get_shared_secretPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Secp256k1ShareSecretReq>)>>('wire_secp256k1_get_shared_secret');
  late final _wire_secp256k1_get_shared_secret = _wire_secp256k1_get_shared_secretPtr.asFunction<void Function(int, ffi.Pointer<wire_Secp256k1ShareSecretReq>)>();

  void wire_secp256k1_recover(
    int port_,
    ffi.Pointer<wire_Secp256k1RecoverReq> req,
  ) {
    return _wire_secp256k1_recover(
      port_,
      req,
    );
  }

  late final _wire_secp256k1_recoverPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_Secp256k1RecoverReq>)>>('wire_secp256k1_recover');
  late final _wire_secp256k1_recover = _wire_secp256k1_recoverPtr.asFunction<void Function(int, ffi.Pointer<wire_Secp256k1RecoverReq>)>();

  void wire_p256_from_seed(
    int port_,
    ffi.Pointer<wire_P256FromSeedReq> req,
  ) {
    return _wire_p256_from_seed(
      port_,
      req,
    );
  }

  late final _wire_p256_from_seedPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_P256FromSeedReq>)>>('wire_p256_from_seed');
  late final _wire_p256_from_seed = _wire_p256_from_seedPtr.asFunction<void Function(int, ffi.Pointer<wire_P256FromSeedReq>)>();
